--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
 </head>
 <body>
     <div id="root">
+        <h2>Not Rendered</h2>
     </div>
-
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-    <script src="./App.js"></script>
+    <script type = "module" src="./App.js"></script>
 <!-- 
     <script>
         const heading = document.createElement("h1");
