react usestate and folder strucuturing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="root">
         <h2>Not Rendered</h2>
     </div>
-    <script type = "module" src="./App.js"></script>
+    <script type = "module" src="./src/App.js"></script>
 <!-- 
     <script>
         const heading = document.createElement("h1");
